--- a/src/app/supervisordetail/supervisordetail.component.html
+++ b/src/app/supervisordetail/supervisordetail.component.html
@@ -83,7 +83,7 @@
     <table id="dtBasicExample" class="table table-striped table-bordered table-sm" style="background-color: aliceblue;"
         cellspacing="0" width="100%">
         <thead>
-            <tr> 
+            <tr>
                 <th class="th-sm">ID
                 </th>
                 <th class="th-sm">Name
@@ -94,7 +94,7 @@
                 </th>
                 <th class="th-sm">Start Date
                 </th>
-                <th class="th-sm">Operation
+                <th class="th-sm">Net Hours
                 </th>
             </tr>
         </thead>
@@ -105,8 +105,6 @@
                 <td>{{userItr.email}}</td>
                 <td>{{userItr.createdOn}}</td>
                 <td>{{userItr.modifiedOn}}</td>
-                <td><button name="editbtn" class="btn col"><i class="fas fa-eye"></i></button>
-                </td>
             </tr>
         </tbody>
         <tfoot>
